# rules_graphviz

./: BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md
examples/: BUILD.bazel  sample.dot
graphviz/: BUILD.bazel  NOTICE  NOTICE.svg2pdf  defs.bzl  graphviz.js  render.mjs  svg2pdf.bundle.js  svg2pdf.mjs  toolchain_type.bzl
